--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -23,7 +23,7 @@
 	"auth-page.registr.register-vs-social": "или  зарегистрироваться с помощью ",
 	"auth-page.registr.repeat-password": "Повторно введите пароль",
 	"auth-page.registr.submit-btn": "Зарегистрироваться",
-	"auth-page.registr.title": "Добро пожаловать на лучшую платформу фриланса Whocan!",
+	"auth-page.registr.title": "Добро пожаловать на лучшую платформу фриланса Profiroom!",
 	"auth-page.registr.week-password": "Введите пароль",
 	"auth-page.registrate": "Зарегистрироваться",
 	"auth-page.reset-pass-title": "Восстановление пароля",
@@ -45,7 +45,7 @@
 	"auth-page.sys-messages.succes-text": "На указанную Вами почту придёт письмо с подтверждением регистрации.",
 	"auth-page.sys-messages.wrong-data": "Не верно указанные данные",
 	"auth-page.was-here": "Уже заходили",
-	"auth-page.wellcome-again": "Будем рады видеть вас снова на лучшей платформе фриланса Whocan",
+	"auth-page.wellcome-again": "Будем рады видеть вас снова на лучшей платформе фриланса Profiroom",
 	"auth-page.wellcome-to-us": "Добро пожаловать на лучшую платформу фриланса Who can!",
 	"bell-notifications.CancelSubmitted": "Фрилансер подтвердил отмену сотрудничества",
 	"bell-notifications.DealCloseByFreelancer": "Работа отменина фрилансером",
@@ -285,7 +285,7 @@
 	"dashboard.home-page.change-alailability-status": "Изменить статус можно здесь",
 	"dashboard.home-page.lost-projects": "проекты не сданы",
 	"dashboard.home-page.new-skill-firstPart": "Вы достигли следующего уровня фриланса",
-	"dashboard.home-page.new-skill-lastPart ": ", это открывает вам дополнительные возможности пользоваться сервисом Whocan!",
+	"dashboard.home-page.new-skill-lastPart ": ", это открывает вам дополнительные возможности пользоваться сервисом Profiroom!",
 	"dashboard.home-page.order-quantity": "Кол-во заказов",
 	"dashboard.home-page.projects-in-process": "Проектов в работе:",
 	"dashboard.home-page.projects-in-queue": "Проектов в очереди: ",
@@ -432,77 +432,78 @@
 	"header.how_it_works": "Как это работает",
 	"home-page.advantages-btn": "зарегистрироваться",
 	"home-page.advantages-item1": "Защита платежей",
-	"home-page.advantages-item1-text": "Для безопасности сделки, зарезервированная сумма хранится на сервисе до успешного выполнения проекта.",
+	"home-page.advantages-item1-text": "Зарезервируйте средства на бирже до успешного выполнения проекта в полном объеме. Выбирайте безопасную сделку для получения качественного результата в срок",
 	"home-page.advantages-item2": "Прозрачность",
-	"home-page.advantages-item2-text": "Только комиссия за сделку. Никаких скрытых платежей, платного повышения рейтинга и статусов пользователя.",
+	"home-page.advantages-item2-text": "На бирже нет скрытых платежей. Мы не продаем рейтинги и платные статусы пользователям. Биржа зарабатывает только на комиссии за сделку.",
 	"home-page.advantages-item3": "Быстрые выплаты",
-	"home-page.advantages-item3-text": "Отправление средств на счет фрилансера осуществляется на протяжении часа после успешного завершения проекта.",
+	"home-page.advantages-item3-text": "Фрилансер получает средства на свой счет на протяжении 1 часа после успешной сдачи проекта.",
 	"home-page.advantages-item4": "Кэшбэк",
-	"home-page.advantages-item4-text": "Процент от каждой успешной сделки, которая прошла без арбитража, будет начисляться на личный счет в сервисе.",
-	"home-page.advantages-item5": "Удобная система",
-	"home-page.advantages-item5-text": "Простой и комфортный интерфейс для мониторинга выполнения проекта, переписки, отправки файлов.",
+	"home-page.advantages-item4-text": "Выполняйте успешно проекты без арбитража, и получайте на счет в сервисе процент.",
+	"home-page.advantages-item5": "Интуитивный интерфейс",
+	"home-page.advantages-item5-text": "Удобный понятный интерфейс помогает опубликовать проект за 2 минуты и получить десятки откликов специалистов, комфортно мониторить его выполнение и обмениваться файлами.",
 	"home-page.advantages-subtitle": "преимущества",
-	"home-page.advantages-text": "Добро пожаловать в сообщество веб-разработчиков, дизайнеров, создателей текстового, графического и видео контента, переводчиков и мастеров озвучки.",
+	"home-page.advantages-text": "Биржа фрилансеров помогает заказчику сэкономить время и деньги для своего бизнеса. Ведь разработчик, дизайнер или копирайтер, создатель графики/аудио или видео, переводчик или диктор сделают работу качественно, быстро и вам не нужно обустраивать рабочее место с уплатой налогов и взносов в фонды.",
 	"home-page.advantages-title": "Почему Gigrum?",
 	"home-page.app-news-subtitle": "мобильное приложение",
-	"home-page.app-news-text": "Наша команда уже разрабатывает для вас мобильное приложение.",
+	"home-page.app-news-text": "С мобильным приложением работать будет еще удобнее и быстрее. Команда Gigrum уведомит вас о запуске.",
 	"home-page.app-news-title": "Совсем скоро!",
 	"home-page.app-news-title2": "Ваш помощник будет всегда под рукой",
 	"home-page.get-start-btn": "Создать аккаунт",
-	"home-page.get-start-subtitle": "Создайте аккаунт и находите лучших фрилансеров для своего бизнеса.",
+	"home-page.get-start-subtitle": "Зарегистрируйтесь прямо сейчас и уже через 10 минут начните получать первые заявки от фрилансеров.",
 	"home-page.get-start-title": "Готовы начать?",
 	"home-page.guestion-btn": "Найти ответ",
-	"home-page.guestion-itme1-customer-text": "Отправление средств на банковский счет получателя осуществляется на протяжении часа после успешного завершения проекта. Время обработки платежа зависит от специфики деятельности банка получателя.",
+	"home-page.guestion-itme1-customer-text": "Средства выводятся мгновенно за несколько минут, но максимальное время вывода устанавливается банками и платежными системами и может составлять до 2 рабочих дней.",
 	"home-page.guestion-itme1-customer-title": "Сколько времени нужно для вывода средств?",
-	"home-page.guestion-itme1-freelancer-text": "Профайл - визитная карточка фрилансера. Важно создать его грамматически правильно и читабельно. Гибкий текстовый редактор позволяет стилистически оформить профайл, чтобы он выглядел профессионально.",
-	"home-page.guestion-itme1-freelancer-title": "Создание профайла",
-	"home-page.guestion-itme2-customer-text": "Согласованная сумма снимается со счета заказчика и замораживается на бирже. Фрилансеру рекомендуется начинать работу после резервирования денежной суммы. При успешном выполнении проекта средства высвобождаются из резервного счета и зачисляются на счет фрилансера.",
+	"home-page.guestion-itme1-freelancer-text": "Профиль фрилансера на онлайн бирже напрямую влияет на успешность работы и получение проектов от заказчиков. Профайл нужно создать не только грамотно и читабельно, но и продающе и в полном объеме. Настройки текстового редактора позволяют оформить профиль удаленного специалиста профессионально и визуально привлекательно.",
+	"home-page.guestion-itme1-freelancer-title": "Создание профиля на бирже фриланса",
+	"home-page.guestion-itme2-customer-text": "На сайте конфиденциальные данные шифруются. Финансовые операции происходят на серверах банка-партнера, мы не храним реквизиты карт.",
 	"home-page.guestion-itme2-customer-title": "Как сервис защитит меня от мошенников?",
-	"home-page.guestion-itme2-freelancer-text": "Оформление деталей услуг и примеров работ презентует мастерство исполнителя. Опишите весь спектр своего опыта, подберите лучшие работы для портфолио, укажите преимущества своего сервиса. Это повысит шансы стать исполнителем.",
-	"home-page.guestion-itme2-freelancer-title": "Описание услуг",
-	"home-page.guestion-itme3-customer-text": "Скрытых платежей нет. Есть только комиссия за вывод средств. Ее размер определяется банком получателя.",
+	"home-page.guestion-itme2-freelancer-text": "Укажите свою основную специализацию, добавьте лучшие на ваш взгляд работы в портфолио. Фрилансеру не стоит показывать свое мастерство указывая все области и знания, лучше сконцентрируйтесь на основной 1-2 сферах, в которых вы действительно классный эксперт.",
+	"home-page.guestion-itme2-freelancer-title": "Описание услуг фрилансера",
+	"home-page.guestion-itme3-customer-text": "Нет. Биржа уведомляет пользователя о его финансовых операциях.",
 	"home-page.guestion-itme3-customer-title": "Есть ли скрытые платежи?",
-	"home-page.guestion-itme3-freelancer-text": "Создав три пакета сервиса Базовый, Стандартный и Премиум, фрилансер обеспечивает ассортимент опций и часто увеличивает среднюю цену сделки. Гибкость услуг позволяет заказчику выбрать наиболее оптимальный комплект.",
+	"home-page.guestion-itme3-freelancer-text": "Базовый, Стандартный, Премиум - три пакеты сервиса, которые представлены на бирже фрилансеров для бизнеса. Выбирая все три пакета вы существенно увеличиваете шанса обращения к вам, и повышаете средний чек продажи своих услуг. Так, заказчик сможет выбрать недорогую быструю работу, или качественную дорогую услугу.",
 	"home-page.guestion-itme3-freelancer-title": "Оформление пакетов сервиса",
-	"home-page.guestion-itme4-freelancer-text": "Кроме основной услуги, заказчику могут быть интересны дополнительные опции, например, рерайт текста после перевода, технический аудит сайта и пр. Правильно оформленный раздел Допродажа увеличивает результаты обеих сторон сделки.",
-	"home-page.guestion-itme4-freelancer-title": "Продажа сопутствующих услуг",
-	"home-page.guestion-itme5-freelancer-text": "Опция позволяет создавать предложения под уникальные запросы заказчиков, которые видны только сторонам сделки. Кастомные офферы создаются по специальной цене и срокам выполнения, исходя из запроса заказчика.",
+	"home-page.guestion-itme4-freelancer-text": "Вы можете указать сопутствующие услуги к основной специализации. Это даст возможность допродажи и удержит клиента. Так, например, сделав перевод текста, клиенту может понадобиться его рерайтинг или адаптация. Заказывая сео продвижение, заказчики зачастую покупают сео аудит сайта. Используйте грамотно продажу сопутствующих услуг на бирже фриланса, и получайте выше доход.",
+	"home-page.guestion-itme4-freelancer-title": "Продажа дополнительных услуг",
+	"home-page.guestion-itme5-freelancer-text": "У заказчиков могут возникнуть узкоспециализированные запросы, например, написать текст для лендинга, развернуть интернет-магазин на Magento, написать статью в технической ил медицинской сфере. Такие уникальные запросы и предложения видны только сторонам сделки, срок выполнения дольше, а цена подобных проектов выше.",
 	"home-page.guestion-itme5-freelancer-title": "Создание специальных предложений",
 	"home-page.guestion-subtitle": "появились вопросы?",
 	"home-page.guestion-text": "Выберите необходимую категорию: Заказчикам / Фрилансерам",
-	"home-page.guestion-text2": "Не нашли ответ? Переходите на страницу Вопросы и Ответы.",
+	"home-page.guestion-text2": "Если вы не нашли нужного ответа, задайте свой вопрос технической поддержке",
 	"home-page.guestion-title": "Часто задаваемые вопросы",
 	"home-page.how-work-for-customer": "Для заказчика",
 	"home-page.how-work-for-freelancer": "Для фрилансера",
-	"home-page.how-work-item1-customer": "Ознакомьтесь с примерами работ фрилансера",
-	"home-page.how-work-item1-freelancer": "Создайте профайл - это ваша визитная карточка фрилансера.",
-	"home-page.how-work-item2-customer": "Почитайте отзывы от предыдущих заказчиков",
-	"home-page.how-work-item2-freelancer": "Опишите весь спектр своего опыта, подберите лучшие работы для портфолио, укажите преимущества своего сервиса.",
-	"home-page.how-work-item3-customer": "Выберите удобный пакет услуг для проекта",
-	"home-page.how-work-item3-freelancer": "Создайте три пакета сервиса Базовый, Стандартный и Премиум. Это позволит увеличить ассортимент опций и часто среднюю цену сделки.",
-	"home-page.how-work-item4-customer": "Свяжитесь с фрилансером для согласования деталей",
-	"home-page.how-work-item4-freelancer": "Используйте дополнительные опции для увеличения результатов обеих сторон.",
+	"home-page.how-work-item1-customer": "Изучите профиль фрилансера, особенно примеры работ",
+	"home-page.how-work-item1-freelancer": "Создайте продающий профиль и заполните портфолио.",
+	"home-page.how-work-item2-customer": "Прочитайте отзывы о работе от заказчиков. ",
+	"home-page.how-work-item2-freelancer": "Начните получать первые отзывы за успешно выполненную работу.",
+	"home-page.how-work-item3-customer": "Выберите удобный для вас пакет услуг.",
+	"home-page.how-work-item3-freelancer": "Успешно завершайте взятые проекты от заказчиков - это повышает вашу репутацию на бирже.",
+	"home-page.how-work-item4-customer": "Свяжитесь напрямую с фрилансером и подтвердите сотрудничество.",
+	"home-page.how-work-item4-freelancer": "Вежливо общайтесь, выполняйте качественно работу в срок - это залог успешной работы на бирже.",
 	"home-page.how-work-subtitle": "работай с уверенностью",
-	"home-page.how-work-text": "Воспользуйтесь фильтрами поиска, чтобы выбрать необходимую категорию услуг для вашего проекта.",
-	"home-page.how-work-text2": "Теперь осталось всего лишь определиться с подходящим фрилансером. Обратите внимание на 4 простых шага, чтобы найти лучшего исполнителя.",
-	"home-page.how-work-text3": "Сделайте четыре простых шага, чтобы присоединиться з сообществу талантливых и креативных мастеров.",
+	"home-page.how-work-text": "Выберите категорию услуг вашего проекта. Затем определитесь с фрилансером исходя из портфолио, отзывов, рейтинга.",
+	"home-page.how-work-text2": "Эти 4 простых правила помогут вам найти лучшего для себя исполнителя",
+  "home-page.how-work-text3": "Специалисту выгодно презентовать свои услуги на бирже, получая новые заказы от клиентов. Онлайн платформа позволяет работать вам с любого места без будильников, начальников и понедельников.",
+  "home-page.how-work-text4": "Для успешной работы на бирже фриланса, создайте продающий профиль, заполните портфолио и получайте хорошие отзывы за удачно выполненные проекты. Чем больше проектов вы сдаете - тем выше шансы, что новые заказчики закажут именно ваши услуги. Вот 4 простых правила успешной работы для фрилансера",
 	"home-page.how-work-title": "Как это работает?",
-	"home-page.search-subtitle": "Gigrum - онлайн биржа фрилансеров для бизнеса",
-	"home-page.search-title": "Десятки тысяч услуг, скорость и качество исполнения именно здесь",
+	"home-page.search-subtitle": "Profiroom для бизнеса - биржа фриланса",
+	"home-page.search-title": "Наймите фрилансера быстро из любой точки по оптимальной для вас цене",
 	"home-page.specialist-item1": "Графика и Дизайн",
-	"home-page.specialist-item1-text": "Создаем дизайн логотипов, сайтов, моб. приложений, дизайн полиграфии,  брендбук.",
-	"home-page.specialist-item2": "Вёрстка и Разработка",
+	"home-page.specialist-item1-text": "дизайн сайтов, полиграфический дизайн, логотипы и баннеры, дизайн брендбуков и маркетинг-китов, фирменный стиль, визуализация",
+	"home-page.specialist-item2": "Разработка и Верстка",
 	"home-page.specialist-item2-text": "Разработка вебсайтов, мобильных приложений, программ и онлайн- сервисов,  верстка, QA",
-	"home-page.specialist-item3": "Копирайтинг и Переводы",
+	"home-page.specialist-item3": "Работа с текстами",
 	"home-page.specialist-item3-text": "Рерайт, художественный текст, веб-контент, рефераты, курсовые, дипломы, статьи.",
-	"home-page.specialist-item4": "SЕО и Аналитика",
+	"home-page.specialist-item4": "SEO",
 	"home-page.specialist-item4-text": "Исследование рынка и опросы, поисковое продвижение, продажа ссылок, SERM, генерация лидов",
 	"home-page.specialist-item5": "Интернет маркетинг",
 	"home-page.specialist-item5-text": "Продвижение сайта и блога, реклама в социальных медиа, поисковые системы, SMM, e-mail маркетинг.",
 	"home-page.specialist-item6": "Видео и Анимация",
 	"home-page.specialist-item6-text": "2D Анимация, 3D Анимация, музыка/звуки, видео, виртуальные туры, раскадровки, гейм-арт.",
 	"home-page.specialist-subtitle": "Категории работ",
-	"home-page.specialist-title": "Найдите идеального специалиста",
+	"home-page.specialist-title": "На бирже работают фрилансеры в следующих категориях",
 	"home-page.support-btn": "перейти на страницу поддержки",
 	"home-page.support-subtitle": "всегда на связи",
 	"home-page.support-text": "Техническая и консультационная поддержка команды Gigrum, которая доступна круглые сутки каждый день недели.",
