--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -23,7 +23,7 @@
 	"auth-page.registr.register-vs-social": "або зареєструватися за допомогою",
 	"auth-page.registr.repeat-password": "Повторно введіть пароль",
 	"auth-page.registr.submit-btn": "Зареєструватися",
-	"auth-page.registr.title": "Ласкаво просимо на кращу платформу фрілансу Whocan!",
+	"auth-page.registr.title": "Ласкаво просимо на кращу платформу фрілансу Profiroom!",
 	"auth-page.registr.week-password": "Введіть пароль",
 	"auth-page.registrate": "Зареєструватися",
 	"auth-page.reset-pass-title": "Відновлення паролю",
@@ -45,7 +45,7 @@
 	"auth-page.sys-messages.succes-text": "На вказану Вами пошту прийде лист з підтвердженням реєстрації.",
 	"auth-page.sys-messages.wrong-data": "Не вірно зазначені дані",
 	"auth-page.was-here": "Уже заходили",
-	"auth-page.wellcome-again": "Будемо раді бачити вас знову на кращій платформі фрілансу Whocan",
+	"auth-page.wellcome-again": "Будемо раді бачити вас знову на кращій платформі фрілансу Profiroom",
 	"auth-page.wellcome-to-us": "Ласкаво просимо на кращу платформу фрілансу Who can!",
 	"bell-notifications.CancelSubmitted": "Фрілансер підтвердив скасування співпраці",
 	"bell-notifications.DealCloseByFreelancer": "Робота отменіна фрілансером",
@@ -285,7 +285,7 @@
 	"dashboard.home-page.change-alailability-status": "Змінити статус можна тут",
 	"dashboard.home-page.lost-projects": "проекти не здані",
 	"dashboard.home-page.new-skill-firstPart": "Ви досягли наступного рівня фрілансу",
-	"dashboard.home-page.new-skill-lastPart ": ", це відкриває вам додаткові можливості користуватися сервісом Whocan!",
+	"dashboard.home-page.new-skill-lastPart ": ", це відкриває вам додаткові можливості користуватися сервісом Profiroom!",
 	"dashboard.home-page.order-quantity": "К-сть замовлень",
 	"dashboard.home-page.projects-in-process": "Проектів в роботі:",
 	"dashboard.home-page.projects-in-queue": "Проектів в черзі:",
@@ -432,77 +432,78 @@
 	"header.how_it_works": "Як це працює",
 	"home-page.advantages-btn": "зареєструватися",
 	"home-page.advantages-item1": "Захист платежів",
-	"home-page.advantages-item1-text": "Для безпеки угоди, зарезервована сума зберігається на сервісі до успішного виконання проекту.",
+	"home-page.advantages-item1-text": "Зарезервуйте кошти на біржі до успішного виконання проекту в повному обсязі. Вибирайте безпечну угоду для отримання якісного результату в строк",
 	"home-page.advantages-item2": "Прозорість",
-	"home-page.advantages-item2-text": "Тільки комісія за операцію. Ніяких прихованих платежів, платного підвищення рейтингу і статусів користувача.",
+	"home-page.advantages-item2-text": "На біржі немає прихованих платежів. Ми не продаємо рейтинги і платні статуси користувачам. Біржа заробляє тільки на комісії за операцію.",
 	"home-page.advantages-item3": "Швидкі виплати",
-	"home-page.advantages-item3-text": "Відправлення коштів на рахунок фрілансера здійснюється протягом години після успішного завершення проекту.",
+	"home-page.advantages-item3-text": "Фрілансер отримує кошти на свій рахунок на протязі 1 години після успішного складання проекту.",
 	"home-page.advantages-item4": "Кешбек",
-	"home-page.advantages-item4-text": "Відсоток від кожної успішної операції, яка пройшла без арбітражу, буде нараховуватися на особистий рахунок в сервісі.",
+	"home-page.advantages-item4-text": "Виконуйте успішно проекти без арбітражу, і отримуйте на рахунок в сервісі відсоток.",
 	"home-page.advantages-item5": "Зручна система",
-	"home-page.advantages-item5-text": "Простий і комфортний інтерфейс для моніторингу виконання проекту, листування, відправки файлів.",
+	"home-page.advantages-item5-text": "Зручний зрозумілий інтерфейс допомагає опублікувати проект за 2 хвилини і отримати десятки відгуків фахівців, комфортно моніторити його виконання і обмінюватися файлами.",
 	"home-page.advantages-subtitle": "переваги",
-	"home-page.advantages-text": "Ласкаво просимо до спільноти веб-розробників, дизайнерів, творців текстового, графічного і відео контенту, перекладачів і майстрів озвучення.",
+	"home-page.advantages-text": "Біржа фрілансерів допомагає замовнику заощадити час і гроші для свого бізнесу. Адже розробник, дизайнер або копірайтер, творець графіки / аудіо або відео, перекладач або диктор зроблять роботу якісно, швидко і вам не потрібно облаштовувати робоче місце зі сплатою податків і внесків до фондів.",
 	"home-page.advantages-title": "Чому Gigrum?",
 	"home-page.app-news-subtitle": "мобільний додаток",
-	"home-page.app-news-text": "Наша команда вже розробляє для вас мобільний додаток.",
+	"home-page.app-news-text": "З мобільним додатком працювати буде набагато зручніше і швидше. Команда Gigrum повідомить вас про запуск",
 	"home-page.app-news-title": "Зовсім скоро!",
 	"home-page.app-news-title2": "Ваш помічник буде завжди під рукою",
 	"home-page.get-start-btn": "Створити акаунт",
-	"home-page.get-start-subtitle": "Створіть акаунт і знаходите кращих фрілансерів для свого бізнесу.",
+	"home-page.get-start-subtitle": "Зареєструватися зараз і вже через 10 хвилин почніть отримувати перші заявки від фрілансерів.",
 	"home-page.get-start-title": "Готові почати?",
 	"home-page.guestion-btn": "Знайти відповідь",
-	"home-page.guestion-itme1-customer-text": "Відправлення коштів на банківський рахунок одержувача здійснюється протягом години після успішного завершення проекту. Час обробки платежу залежить від специфіки діяльності банку одержувача.",
+	"home-page.guestion-itme1-customer-text": "Засоби виводяться миттєво за кілька хвилин, але максимальний час виведення встановлюється банками і платіжними системами і може становити до 2 робочих днів.",
 	"home-page.guestion-itme1-customer-title": "Скільки часу потрібно для виведення коштів?",
-	"home-page.guestion-itme1-freelancer-text": "Профайл - візитна картка фрілансера. Важливо створити його граматично правильно і читабельно. Гнучкий текстовий редактор дозволяє стилістично оформити профайл, щоб він виглядав професійно.",
-	"home-page.guestion-itme1-freelancer-title": "Створення профайла",
-	"home-page.guestion-itme2-customer-text": "Узгоджена сума знімається з рахунку замовника і заморожується на біржі. Фрилансеру рекомендується починати роботу після резервування грошової суми. При успішному виконанні проекту кошти вивільняються з резервного рахунку і зараховуються на рахунок фрілансера.",
+	"home-page.guestion-itme1-freelancer-text": "Профіль фрілансера на онлайн біржі безпосередньо впливає на успішність роботи і отримання проектів від замовників. Профайл потрібно створити не тільки грамотно і читабельно, але і продающе і в повному обсязі. Налаштування текстового редактора дозволяють оформити дистанційне фахівця професійно і візуально привабливо.",
+	"home-page.guestion-itme1-freelancer-title": "Создание профайла",
+	"home-page.guestion-itme2-customer-text": "На сайті конфіденційні дані шифруються. Фінансові операції відбуваються на серверах банку-партнера, ми не зберігаємо реквізити карт.",
 	"home-page.guestion-itme2-customer-title": "Як сервіс захистить мене від шахраїв?",
-	"home-page.guestion-itme2-freelancer-text": "Оформлення деталей послуг та прикладів робіт презентує майстерність виконавця. Опишіть весь спектр свого досвіду, підберіть кращі роботи для портфоліо, вкажіть переваги свого сервісу. Це підвищить шанси стати виконавцем.",
-	"home-page.guestion-itme2-freelancer-title": "Опис послуг",
-	"home-page.guestion-itme3-customer-text": "Прихованих платежів немає. Є тільки комісія за виведення коштів. Її розмір визначається банком одержувача.",
+	"home-page.guestion-itme2-freelancer-text": "Вкажіть свою основну спеціалізацію, додайте кращі на ваш погляд роботи в портфоліо. Фрилансеру не варто показувати свою майстерність вказуючи всі області і знання, краще сконцентруйтеся на основний 1-2 сферах, в яких ви дійсно класний експерт.",
+	"home-page.guestion-itme2-freelancer-title": "Описание услуг",
+	"home-page.guestion-itme3-customer-text": "Ні. Біржа повідомляє користувача про його фінансові операції.",
 	"home-page.guestion-itme3-customer-title": "Чи є приховані платежі?",
-	"home-page.guestion-itme3-freelancer-text": "Створивши три пакети сервісу Базовий, Стандартний і Преміум, фрілансер забезпечує асортимент опцій і часто збільшує середню ціну угоди. Гнучкість послуг дозволяє замовнику вибрати найбільш оптимальний комплект.",
+	"home-page.guestion-itme3-freelancer-text": "Базовий, Стандартний, Преміум - три пакети сервісу, які представлені на біржі фрілансерів для бізнесу. Вибираючи все три пакети ви істотно збільшуєте шансу звернення до вас, і підвищуєте середній чек продажу своїх послуг. Так, замовник зможе вибрати недорогу швидку роботу, або якісну дорогу послугу.",
 	"home-page.guestion-itme3-freelancer-title": "Оформлення пакетів сервісу",
-	"home-page.guestion-itme4-freelancer-text": "Крім основної послуги, замовнику можуть бути цікаві додаткові опції, наприклад, рерайт тексту після перекладу, технічний аудит сайту та ін. Правильно оформлений розділ допродаж збільшує результати обох сторін угоди.",
+	"home-page.guestion-itme4-freelancer-text": "Ви можете вказати супутні послуги до основної спеціалізації. Це дасть можливість допродажу і утримає клієнта. Так, наприклад, зробивши переклад тексту, клієнту може знадобитися його рерайтинг або адаптація. Замовляючи сео просування, замовники часто купують сео аудит сайту. Використовуйте грамотно продаж супутніх послуг на біржі фрілансу, і отримуйте вищий дохід.",
 	"home-page.guestion-itme4-freelancer-title": "Продаж супутніх послуг",
-	"home-page.guestion-itme5-freelancer-text": "Опція дозволяє створювати пропозиції під унікальні запити замовників, які видно тільки сторонам угоди. Кастомні оффери створюються за спеціальною ціною і термінами виконання, виходячи із запиту замовника.",
+	"home-page.guestion-itme5-freelancer-text": "У замовників можуть виникнути вузькоспеціалізовані запити, наприклад, написати текст для Лендінзі, розгорнути інтернет-магазин на Magento, написати статтю в технічній мул медичній сфері. Такі унікальні запити і пропозиції видно тільки сторонам угоди, термін виконання довше, а ціна подібних проектів вище.",
 	"home-page.guestion-itme5-freelancer-title": "Створення спеціальних пропозицій",
 	"home-page.guestion-subtitle": "з'явилися питання?",
 	"home-page.guestion-text": "Виберіть необхідну категорію: Замовникам / фрілансерів",
-	"home-page.guestion-text2": "Чи не знайшли відповідь? Переходьте на сторінку Питання і Відповіді.",
+	"home-page.guestion-text2": "Якщо ви не знайшли потрібної відповіді, задайте своє питання технічної підтримки",
 	"home-page.guestion-title": "Поширені запитання",
 	"home-page.how-work-for-customer": "Для замовника",
 	"home-page.how-work-for-freelancer": "Для фрілансера",
-	"home-page.how-work-item1-customer": "Ознайомтеся з прикладами робіт фрілансера",
-	"home-page.how-work-item1-freelancer": "Створіть профайл - це ваша візитна картка фрілансера.",
-	"home-page.how-work-item2-customer": "Почитайте відгуки від попередніх замовників",
-	"home-page.how-work-item2-freelancer": "Опишіть весь спектр свого досвіду, підберіть кращі роботи для портфоліо, вкажіть переваги свого сервісу.",
-	"home-page.how-work-item3-customer": "Виберіть зручний пакет послуг для проекту",
-	"home-page.how-work-item3-freelancer": "Створіть три пакети сервісу Базовий, Стандартний і Преміум. Це дозволить збільшити асортимент опцій і часто середню ціну угоди.",
-	"home-page.how-work-item4-customer": "Зв'яжіться з фрілансером для узгодження деталей",
-	"home-page.how-work-item4-freelancer": "Використовуйте додаткові опції для збільшення результатів обох сторін.",
+	"home-page.how-work-item1-customer": "Вивчіть профіль фрілансера, особливо приклади робіт",
+	"home-page.how-work-item1-freelancer": "Создайте продающий профиль и заполните портфолио.",
+	"home-page.how-work-item2-customer": "Створіть продає профіль і заповніть портфоліо.",
+	"home-page.how-work-item2-freelancer": "Почніть отримувати перші відгуки за успішно виконану роботу.",
+	"home-page.how-work-item3-customer": "Виберіть зручний для вас пакет послуг.",
+	"home-page.how-work-item3-freelancer": "Успішно завершуйте взяті проекти від замовників - це підвищує вашу репутацію на біржі.",
+	"home-page.how-work-item4-customer": "Зв'яжіться безпосередньо з фрілансером і підтвердіть співпрацю.",
+	"home-page.how-work-item4-freelancer": "Чемно спілкуйтеся, виконуйте якісно роботу в строк - це запорука успішної роботи на біржі.",
 	"home-page.how-work-subtitle": "працюй з упевненістю",
-	"home-page.how-work-text": "Скористайтеся фільтрами пошуку, щоб вибрати необхідну категорію послуг для вашого проекту.",
-	"home-page.how-work-text2": "Тепер залишилося лише визначитися з відповідним фрілансером. Зверніть увагу на 4 простих кроки, щоб знайти кращого виконавця.",
-	"home-page.how-work-text3": "Зробіть чотири простих кроки, щоб приєднатися з спільноті талановитих і креативних майстрів.",
+	"home-page.how-work-text": "Виберіть категорію послуг вашого проекту. Потім визначтеся з фрілансером виходячи з портфоліо, відгуків, рейтингу.",
+	"home-page.how-work-text2": "Ці 4 простих правила допоможуть вам знайти кращого для себе виконавця",
+  "home-page.how-work-text3": "Фахівцю вигідно презентувати свої послуги на біржі, отримуючи нові замовлення від клієнтів. Онлайн платформа дозволяє працювати вам з будь-якого місця без будильників, начальників і понеділків.",
+  "home-page.how-work-text4": "Для успішної роботи на біржі фрілансу, створіть продає профіль, заповніть портфоліо і отримуйте хороші відгуки за вдало виконані проекти. Чим більше проектів ви здаєте - тим вищі шанси, що нові замовники замовлять саме ваші послуги. Ось 4 простих правила успішної роботи для фрілансера",
 	"home-page.how-work-title": "Як це працює?",
-	"home-page.search-subtitle": "Gigrum - онлайн біржа фрілансерів для бізнесу",
-	"home-page.search-title": "Десятки тисяч послуг, швидкість і якість виконання саме тут",
+	"home-page.search-subtitle": "Profiroom для бізнесу - біржа фріланса",
+	"home-page.search-title": "Найміть фрілансера швидко з будь-якої точки по оптимальній для вас ціні",
 	"home-page.specialist-item1": "Графіка і Дизайн",
 	"home-page.specialist-item1-text": "Створюємо дизайн логотипів, сайтів, моб. додатків, дизайн поліграфії, брендбук.",
-	"home-page.specialist-item2": "Верстка й Розробка",
+	"home-page.specialist-item2": "Розробка й Верстка",
 	"home-page.specialist-item2-text": "Разработка вебсайтов, мобильных приложений, программ и онлайн- сервисов,  верстка, QA",
-	"home-page.specialist-item3": "Копірайтинг та Переклади",
+	"home-page.specialist-item3": "Работа з текстами",
 	"home-page.specialist-item3-text": "Рерайт, художній текст, веб-контент, реферати, курсові, дипломи, статті.",
-	"home-page.specialist-item4": "SЕО і Аналітика",
+	"home-page.specialist-item4": "SЕО",
 	"home-page.specialist-item4-text": "Дослідження ринку та опитування, пошукове просування, продаж посилань, SERM, генерація лідів",
 	"home-page.specialist-item5": "Інтернет маркетинг",
 	"home-page.specialist-item5-text": "Просування сайту і блогу, реклама в соціальних медіа, пошукові системи, SMM, e-mail маркетинг.",
 	"home-page.specialist-item6": "Відео та Анімація",
 	"home-page.specialist-item6-text": "2D Анімація, 3D Анімація, музика / звуки, відео, віртуальні тури, розкадровки, гейм-арт.",
 	"home-page.specialist-subtitle": "Категорії робіт",
-	"home-page.specialist-title": "Знайдіть ідеального фахівця",
+	"home-page.specialist-title": "На біржі працюють фрілансери в наступних категоріях",
 	"home-page.support-btn": "перейти на сторінку підтримки",
 	"home-page.support-subtitle": "завжди на зв'язку",
 	"home-page.support-text": "Технічна і консультаційна підтримка команди Gigrum, яка доступна цілодобово кожен день тижня.",
