--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -91,7 +91,7 @@
 	"chat.work_chat.history.DealFinishedByFreelancer": "Работа закончена",
 	"chat.work_chat.history.approveBrief": "Сделка подтверждена",
 	"chat.work_chat.history.arbitration": "Обращение в арбитарж",
-	"chat.work_chat.history.holdMoney": "Средства зарезирвировано.",
+	"chat.work_chat.history.holdMoney": "Средства зарезервировано.",
 	"chat.work_chat.history.moneyGivenToCustomer": "Деньги возвращены на счет заказчика",
 	"chat.work_chat.history.moneyGivenToFreelancer": "Деньги переведены на счет фрилансера",
 	"chat.work_chat.history.workStarted": "Работа начата",
