--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -83,18 +83,18 @@
 	"chat.work_chat.deal_info.packageType_advanced": "Пакет стандартный",
 	"chat.work_chat.deal_info.packageType_basic": "Пакет базовый",
 	"chat.work_chat.deal_info.packageType_premium": "Пакет премиум",
-	"chat.work_chat.history.CancelSubmitted": "",
-	"chat.work_chat.history.DealCloseByFreelancer": "Работа отменена фрилансером",
-	"chat.work_chat.history.DealClosedByCustomer": "Работа завершена заказчиком",
-	"chat.work_chat.history.DealFinishCanceledByCustomer": "",
-	"chat.work_chat.history.DealFinished": "",
-	"chat.work_chat.history.DealFinishedByFreelancer": "Работа закончена",
-	"chat.work_chat.history.approveBrief": "Сделка подтверждена",
+	"chat.work_chat.history.CancelSubmitted": "Скасування підтверджена",
+	"chat.work_chat.history.DealCloseByFreelancer": "Робота скасована фрілансером",
+	"chat.work_chat.history.DealClosedByCustomer": "Робота завершена замовником",
+	"chat.work_chat.history.DealFinishCanceledByCustomer": "Повернуто на доопрацювання",
+	"chat.work_chat.history.DealFinished": "Угода завершена",
+	"chat.work_chat.history.DealFinishedByFreelancer": "Праця завершена",
+	"chat.work_chat.history.approveBrief": "Угода підтверджена",
 	"chat.work_chat.history.arbitration": "Звернення в арбітарж",
-	"chat.work_chat.history.holdMoney": "Средства зарезирвировано.",
+	"chat.work_chat.history.holdMoney": "Засоби зарезервовано.",
 	"chat.work_chat.history.moneyGivenToCustomer": "Гроші повернені на рахунок замовника",
 	"chat.work_chat.history.moneyGivenToFreelancer": "Гроші переведені на рахунок фрілансера",
-	"chat.work_chat.history.workStarted": "Работа начата",
+	"chat.work_chat.history.workStarted": "Робота розпочата",
 	"chat.work_chat.offer-data.call-arbiter": "звернутися в арбітраж",
 	"chat.work_chat.offer-data.cancel-deal": "скасувати роботу",
 	"chat.work_chat.offer-data.changes": "Кількість правок:",
